# trellys

./: .gitignore  ExternalReplib.md  Makefile  ProjectHome.md  README  README.git
branches/issue3-hierarchial-modules/: Makefile
branches/issue7/: Makefile
branches/no-pp-value-restriction/: Makefile
branches/termination-inversion-svn/: .gitignore  Makefile
branches/zombie-trellys-POPL15/: README  trellys-core.cabal
lib/: README
lib/HashCons/: HashCons.hs  TwoLevelTut.hs  TwoLvUnboundHash.hs
lib/layout-token/: README
lib/sep-core/: sep-core.cabal  sepcore.cabal  seppp-syntax.hs  subtest.hs
lib/sepp/: LICENSE  Makefile  progress.org  sep-mode.el  seppp.cabal
lib/unbound-example/: FiExample.hs  Fw.hs  FwExample.hs
nax/: Makefile  nax.cabal
nax/Notes/: StratifiedSyntaxNotes.hs
nax/src/: BaseTypes.hs  Choice.hs  DepthFirstSearch.hs  Eval.hs  Impred.hs  Main.hs  Monads.hs  Names.hs  Options.hs  Parser.hs  Parser2.hs  Syntax.hs  Syntax2.hs  Terms.hs  TypeCheck.hs  Types.hs  UniqInteger.hs  Value.hs  nax.cabal
nax/src/Language/Trellys/: LayoutToken.hs
nax/test/: HOAS.nax  data.nax  eval.hs  msfCataExpValue.hs  work.nax
src/: Test.hs  Trellys.hs  trellys-core.cabal
src/Language/Trellys/: CongruenceClosureTests.hs  Diff.hs  Environment.hs  Extraction.hs  GenericBind.hs  LayoutToken.hs  Modules.hs  OpSem.hs  Options.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs  TypeMonad.hs
test/: Append.trellys  Append2.trellys  Arithmetic.trellys  ArithmeticDiv.trellys  Assoc.trellys  CastShiftTrick.trellys  CongruenceTests.trellys  DeepMatchError6.trellys  ErasedConv.trellys  ErasedConvBad.trellys  Existentials.trellys  ExtensionalEquality.trellys  FreeVarsBug.trellys  HierTest.trellys  LessThanLib_LT.trellys  LessThanNat.trellys  LessThanNat_LT.trellys  LessThanNat_lt.trellys  LessThanNat_lt_eq_True.trellys  LetRebind.trellys  List.trellys  Lists.trellys  Logic.trellys  Makefile  NatElimination.trellys  Ott.trellys  OttAppend.trellys  Prelude.trellys  ProgList.trellys  ProgrammaticCdiv.trellys  README  Snoc.agda  Sort.trellys  StrongNat.trellys  Subvert.trellys  TermCase.trellys  TerminationAsValueRestrictionWorkaround.trellys  TerminationInversion.trellys  Test_Q_Cons.trellys  Thunky_plus_comm.trellys  (+9 more)
trunk/: .gitignore  Makefile  README  README.git
trunk/lib/: README
trunk/nax/: Makefile  nax.cabal
trunk/src/: Trellys.hs  trellys-core.cabal
trunk/test/: Append2.trellys  Arithmetic.trellys  Eval.trellys  ExtensionalEquality.trellys  LessThanLib_LT.trellys  LessThanLib_lt.trellys  LessThanNat.trellys  LessThanNat_LT.trellys  Lists.trellys  Logic.trellys  Makefile  NatElimination.trellys  Ott.trellys  Prelude.trellys  ProgList.trellys  StrongNat.trellys  Subvert.trellys  TerminationAsValueRestrictionWorkaround.trellys  Thunky_plus_assoc.trellys  Trees.trellys  tickets.txt  (+6 more)
trunk/zombie-trellys/src/: Trellys.hs  trellys-core.cabal
trunk/zombie-trellys/src/Language/Trellys/: AOpSem.hs  CongruenceClosure.hs  Diff.hs  Environment.hs  EqualityReasoning.hs  Error.hs  Extraction.hs  FreshT.hs  GenericBind.hs  Modules.hs  OpSem.hs  Options.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs  TypeCheckCore.hs  TypeMonad.hs
wiki/: ExternalReplib.wiki
zombie-trellys/: .gitignore  Makefile  stack.yaml  trellys-core.cabal
zombie-trellys/src/: Trellys.hs  trellys-core.cabal
zombie-trellys/src/Language/Trellys/: AOpSem.hs  CongruenceClosure.hs  CongruenceClosureTests.hs  Diff.hs  Environment.hs  EqualityReasoning.hs  Error.hs  Extraction.hs  GenericBind.hs  LayoutToken.hs  Modules.hs  OpSem.hs  Options.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TestReduction.hs  TypeCheck.hs  TypeCheckCore.hs  TypeMonad.hs
(+520 files in other folders)
