Name: trellys-core
Version: 0.0
Description: An implementation of Trellys tracking the development and
             definition of the language.
-- Author: Trellys Team <trellys@...>
-- Maintainer: Garrin Kimmell <kimmell@ku.edu>
Cabal-Version: >= 1.2
Build-type: Simple
-- Data-files:

library
  Exposed-modules: Language.Trellys.Syntax
                   Language.Trellys.Parser
                   Language.Trellys.TypeCheck
  Build-depends:  base >= 4

executable trellys
  Main-is: Trellys.hs
  Build-depends: base >=4,
                 parsec >= 3.1 && < 3.2,
                 pretty >= 1.0.1.0,
                 RepLib >= 0.4,
                 mtl,
                 containers,
                 directory, filepath,
                 unbound == 0.2.3
  Ghc-Options:     -main-is Trellys -Wall


