Name: nax
Version: 0.0
Description: An implementation of Trellys tracking the development and
             definition of the language.
Cabal-Version: >= 1.2
Build-type: Simple
tested-with: GHC == 7.4.1
           , GHC == 7.2.1
           , GHC == 7.0.4

executable nax
  hs-source-dirs: . ../../lib/layout-token/src/
  Main-is: Main.hs
  Build-depends: base >= 4
               , parsec >= 3.1 && < 3.2
               , pretty >= 1.0.1.0
               , mtl
               , containers
  Ghc-Options: -Wall
