Name: trellys-core
Version: 0.0
Description: An implementation of Trellys tracking the development and
             definition of the language.
-- Author: Trellys Team <trellys@...>
-- Maintainer: Garrin Kimmell <kimmell@ku.edu>
Cabal-Version: >= 1.2
Build-type: Simple
tested-with: GHC == 7.2.1
         --, GHC == 7.4.1

library
  hs-source-dirs: . ../../lib/layout-token/src/
  Exposed-modules: Language.Trellys.Syntax
                   Language.Trellys.Parser
                   Language.Trellys.TypeCheck
  Build-depends:  base >= 4

executable trellys
  hs-source-dirs: . ../../lib/layout-token/src/
  Main-is: Trellys.hs
  Build-depends: base >=4,
                 parsec >= 3.1 && < 3.2,
                 pretty >= 1.0.1.0,
                 RepLib >= 0.5.1 && < 0.5.3, 
                 unbound >= 0.3.1 && < 0.5,
                 mtl,
                 -- 0.2.2.0, 0.3.0.0
                 transformers,
                 array >= 0.3.0.2 && < 0.5,
                 containers,
                 directory,
                 filepath,
                 HUnit,
                 QuickCheck,
                 bimap == 0.2.4
  Ghc-Options:     -main-is Trellys -Wall


